# STDISCM_Distributed-AI-System

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: grpc_client.cpp  grpc_client.h  main.cpp  mainwindow.cpp  mainwindow.h
proto/: ocr.proto
server/: CMakeLists.txt
server/src/: main.cpp  tesseract_wrapper.cpp  tesseract_wrapper.h  thread_pool.cpp  thread_pool.h
